# palmier-pro-windows

Sources/PalmierPro/Agent/: AgentService.swift
Sources/PalmierPro/Agent/Panel/: AgentPanelView.swift  ChatHistoryList.swift
Sources/PalmierPro/Agent/Tools/: ToolDefinitions.swift
Sources/PalmierPro/Editor/Tour/: TourOverlay.swift
Sources/PalmierPro/Editor/ViewModel/: EditorViewModel+Cost.swift  EditorViewModel+MediaLibrary.swift
Sources/PalmierPro/Project/: VideoProject.swift
app/: README.md
app/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.css  App.tsx  index.css
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/scripts/: test-list-models.py  test-mcp.py  test-resources.py
app/src-tauri/src/: lib.rs  logging.rs  main.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/editor/: mod.rs  state.rs  tools.rs
app/src-tauri/src/generation/: mod.rs  models.rs
app/src-tauri/src/mcp/: instructions.rs  mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
